--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
             text-decoration: underline;
         }
     </style>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YZ6RT2ZVM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7YZ6RT2ZVM');
+    </script>
 </head>
 <body>
     <div class="container">
